@@ -1,3 +1,10 @@
+2014-03-26  Mikolaj Izdebski  <zurgunt@gmail.com>
+
+	Fix block ordering during compression
+	* src/compress.c: Replace order deque with next position pointer
+	stored in work block.  This way block order doesn't have to be defined
+	sequentially.
+
 2014-03-09  Mikolaj Izdebski  <zurgunt@gmail.com>
 
 	Release version 2.4
